# Aether

./: .gitignore
.sisyphus/: boulder.json
.sisyphus/drafts/: messagerie-chiffree.md
.sisyphus/evidence/: task1-structure.txt
.sisyphus/notepads/messagerie-chiffree/: learnings.md  track.md
.sisyphus/plans/: messagerie-chiffree.md
Aether-Client/src/: Client.java  Time.java
Aether-Server/src/: ClientHandler.java  Server.java  Userprofile.java
docs/: ARCHITECTURE.md
mobile/: App.js  app.json  package.json
scripts/: build-android.sh  build-ios.sh  build-linux.sh  build-windows.sh  build.sh
server/: CMakeLists.txt
server/src/: main.c  server.c  server.h
src/: Client.java  ClientHandler.java  Server.java  Userprofile.java
